--- a/algorithms-THCormen.cabal
+++ b/algorithms-THCormen.cabal
@@ -29,7 +29,7 @@ library
 --                     , simple
 --  default-language:    Haskell2010
 
-test-suite simple-test
+test-suite lib-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   other-modules:       Spec
